--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,20 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/black"
     tools:context=".MainActivity">
+
+    <Chronometer
+        android:id="@+id/timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="24sp"
+        android:textColor="@android:color/white"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/sudokuGrid"
+        android:layout_marginBottom="16dp"/>
 
     <GridLayout
         android:id="@+id/sudokuGrid"
@@ -13,11 +26,11 @@
         android:layout_height="wrap_content"
         android:columnCount="9"
         android:rowCount="9"
-        android:background="@android:color/black"
+        android:background="@android:color/darker_gray"
         app:layout_constraintBottom_toTopOf="@+id/newGameButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/timer" />
 
     <Button
         android:id="@+id/newGameButton"
@@ -44,6 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
+        android:textColor="@android:color/white"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/newGameButton"
         app:layout_constraintStart_toStartOf="parent"
