feat: Add best time tracking and hint button
- A "Best Time" feature has been added to track and display the fastest completion time for each difficulty level.
- The best time is saved to SharedPreferences and displayed on the game screen.
- The completion message now shows the time in a "mm:ss" format.
- A new, non-functional "Ledtråd" (Hint) button has been added to the UI layout.
- The layout of the bottom buttons ("New Game", "Hint", "Check Solution") has been updated to use a horizontal chain for even distribution.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,17 @@
         app:layout_constraintBottom_toTopOf="@+id/sudokuGrid"
         android:layout_marginBottom="16dp"/>
 
+    <TextView
+        android:id="@+id/bestTimeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Best: --:--"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp" />
+
     <GridLayout
         android:id="@+id/sudokuGrid"
         android:layout_width="wrap_content"
@@ -34,22 +45,33 @@
 
     <Button
         android:id="@+id/newGameButton"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="New Game"
+        app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/checkSolutionButton"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/hintButton"
+        app:layout_constraintTop_toBottomOf="@+id/sudokuGrid" />
+
+    <Button
+        android:id="@+id/hintButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Ledtråd"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/newGameButton"
+        app:layout_constraintEnd_toStartOf="@+id/checkSolutionButton"
         app:layout_constraintTop_toBottomOf="@+id/sudokuGrid" />
 
     <Button
         android:id="@+id/checkSolutionButton"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Check Solution"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/newGameButton"
+        app:layout_constraintStart_toEndOf="@+id/hintButton"
         app:layout_constraintTop_toBottomOf="@+id/sudokuGrid" />
 
     <TextView
