refactor: Externalize strings in main activity layout
- Hardcoded text for `bestTimeTextView`, `newGameButton`, `hintButton`, and `checkSolutionButton` has been replaced with string resources.
- The following strings have been externalized:
    - "Best: --:--" -> `@string/best_time_default`
    - "New Game" -> `@string/new_game`
    - "Ledtråd" -> `@string/hint`
    - "Check Solution" -> `@string/check_solution`

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:id="@+id/bestTimeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Best: --:--"
+        android:text="@string/best_time_default"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintTop_toTopOf="parent"
@@ -47,7 +47,7 @@
         android:id="@+id/newGameButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="New Game"
+        android:text="@string/new_game"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +58,7 @@
         android:id="@+id/hintButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Ledtråd"
+        android:text="@string/hint"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/newGameButton"
         app:layout_constraintEnd_toStartOf="@+id/checkSolutionButton"
@@ -68,7 +68,7 @@
         android:id="@+id/checkSolutionButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Check Solution"
+        android:text="@string/check_solution"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/hintButton"
