refactor: Externalize strings in start menu layout
- Replaced hardcoded text for the title and difficulty buttons (Easy, Medium, Hard, Expert) with string resources.
- The following strings in `activity_start_menu.xml` have been externalized:
    - `"Välj svårighetsgrad"` is now `@string/difficulty_selection_title`.
    - `"Lätt"` is now `@string/difficulty_easy`.
    - `"Medel"` is now `@string/difficulty_medium`.
    - `"Svår"` is now `@string/difficulty_hard`.
    - `"Expert"` is now `@string/difficulty_expert`.

--- a/app/src/main/res/layout/activity_start_menu.xml
+++ b/app/src/main/res/layout/activity_start_menu.xml
@@ -11,7 +11,7 @@
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Välj svårighetsgrad"
+        android:text="@string/difficulty_selection_title"
         android:textColor="@android:color/white"
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,7 +23,7 @@
         android:id="@+id/easyButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Lätt"
+        android:text="@string/difficulty_easy"
         app:layout_constraintTop_toBottomOf="@+id/titleTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +33,7 @@
         android:id="@+id/mediumButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Medel"
+        android:text="@string/difficulty_medium"
         app:layout_constraintTop_toBottomOf="@+id/easyButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
         android:id="@+id/hardButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Svår"
+        android:text="@string/difficulty_hard"
         app:layout_constraintTop_toBottomOf="@+id/mediumButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
         android:id="@+id/expertButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Expert"
+        android:text="@string/difficulty_expert"
         app:layout_constraintTop_toBottomOf="@+id/hardButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
